--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -5,8 +5,7 @@
     height: 100%;
     overflow-y: hidden;
     background: #020202;
-    opacity: 0.85;
-    
+    opacity: 0.85;   
 }
 #page-context-wrapper{
     width: 100%;
@@ -17,6 +16,7 @@
 
 #wrapper.menuDisplayed #sidebar-wrapper{
     width: 250px;
+    position: fixed;
 }
 
 #wrapper.menuDisplayed #page-context-wrapper{
