removed the documents upload as 'required'

--- a/templates/updateEmployee.html
+++ b/templates/updateEmployee.html
@@ -6,7 +6,7 @@
   }
 </script>
 <div class="container">
-    <h3>Employee Registration</h3>
+    <h3>Employee Updatation</h3>
     <form action="/updateEmployee" method="post" class="center" enctype="multipart/form-data">
       <br/>
       <br/>
