--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
     <div id="wrapper">
         
         <div id="sidebar-wrapper" >
-            <ul class="sidebar-nav">
+            <ul class="sidebar-nav list-group">
                 <li><div>
                         <p>HR</p>
                         <a href="#">{{ session['user'] }}</a>
