--- a/templates/home.html
+++ b/templates/home.html
@@ -40,9 +40,7 @@
                     <div>
                         Timing
                         <ul>
-                            <li><a href="#">DAILY IN / OUT</a></li>
-                            <li><a href="#">LUNCH IN / OUT</a></li>
-                            <li><a href="#">TEA TIME IN / OUT</a></li>
+                            <li><a href="/attendance">Attendance</a></li>
                         </ul>
                     </div>
                 </li>
